--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <main></main>
+
+  <aside>
+    <button id="sort-descending">Desc</button>
+  </aside>
   <script src="./script.js"></script>
 </body>
 </html>
