--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <aside>
     <button id="sort-descending">Desc</button>
+    <button id="">Asc</button>
   </aside>
   <script src="./script.js"></script>
 </body>
