--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
   <aside>
     <button id="sort-descending">Desc</button>
-    <button id="">Asc</button>
+    <button id="sort-ascending">Asc</button>
+    <button id="sort-odd">Only odd</button>
+    <button id="sort-even">Only even</button>
+     <button id="sort-reset">All</button>
   </aside>
   <script src="./script.js"></script>
 </body>
